# TextAnalyzer

./: CMakeLists.txt  README.md
Client/: CMakeLists.txt  main.cpp
Client/MainWindow/: mainwindow.cpp  mainwindow.h  mainwindow.ui
Server/: CMakeLists.txt  main.cpp
Server/App/: Server.cpp  Server.h  ServerTCPSocket.cpp  ServerTCPSocket.h
